# sport-home-parser

./: .env.example  .gitignore  Makefile  pyproject.toml  soup.txt
src/: main.py  test.py  zelart-com-ua.pem
src/api/: api.py
src/bot/: BotConfigs.py  BotPlugins.py
src/config/: botConfig.py  dbConfig.py  env.py  langConfig.py
src/data/locales/: ru.py  uk.py
src/dialogs/: AdminDialogs.py  BotDialogs.py  UserDialogs.py
src/helpers/: Dotenv.py
src/languages/: UKR.py
src/libs/bot_engine/: main.py
src/libs/bot_engine/bot/: Bot.py  BotConfigs.py  Filters.py
src/libs/bot_engine/data/: config.py  env.py
src/libs/bot_engine/database/: Adapter.py  Cache.py  Database.py  InitialUsers.py  MongoDB.py  Replica.py  Versions.py
src/libs/bot_engine/dialogs/: BotDialogs.py  DialogGenerator.py
src/libs/bot_engine/enums/: Database.py  User.py
src/libs/bot_engine/languages/: Languages.py  Locale.py
src/libs/bot_engine/server/: FastAPIServer.py
src/libs/bot_engine/templates/: BotDialogs.py  DialogsExample.py  initial_users.py
src/libs/bot_engine/users/: InitialUsers.py  NewUser.py  User.py
src/libs/bot_engine/utils/: Dotenv.py  Logger.py  Schedule.py
src/parser/: PageScrapper.py  SitemapParser.py
src/server/: Server.py  server.py
